--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <p class="text-center text-muted">SLXEED</p>
     <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
   </footer>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module">
     import { checkLoginStatus, logoutUser } from "./js/login.mjs";
 
