--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dist/css/index.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <script src="./js/login.mjs" type="module"></script>
   <script src="./js/registerUser.mjs" type="module"></script>
   <script src="./js/variables.mjs" type="module"></script>
@@ -88,8 +87,6 @@
     <p class="text-center text-muted">SLXEED</p>
     <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
   </footer>
-
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script type="module">
     import { checkLoginStatus, logoutUser } from "./js/login.mjs";
 
@@ -122,5 +119,6 @@
       signOutButton.addEventListener("click", logoutUser);
     });
   </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
