--- a/profile/index.html
+++ b/profile/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/dist/css/index.css"/>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
   <script src="../js/fetchProfile.mjs" type="module"></script>
   <script src="../js/renderProfilePosts.mjs" type="module"></script>
   <script src="../js/delete-post.mjs" type="module"></script>
@@ -68,11 +67,11 @@
       <div class="row user-posts_profile-page gy-4"></div>
       <div class="loader-container" style="display:none;">Loading...</div>
     </div>
-    <div class="modal" tabindex="-1" id="deleteConfirmationModal">
+    <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Confirm Delete</h5>
+            <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
@@ -85,6 +84,7 @@
         </div>
       </div>
     </div>
+    
   </main>
   <footer class="py-3 my-4 mt-5">
     <hr>
@@ -96,7 +96,9 @@
     <p class="text-center text-muted">SLXEED</p>
     <p class="text-center text-muted">© 2024 Sigrid Lydvo</p>
   </footer>
+  <script>
+    const deleteConfirmationModal = new bootstrap.Modal(document.getElementById('deleteConfirmationModal'));
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
